feat: nanobanana + improvements

--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,6 @@ OW_BUDGET_CAP_USD=0
 
 # Optional — MCP servers
 OW_DB_URL=
+
+# Optional — Gemini API key for nanobanana image generation skill
+GEMINI_API_KEY=
