--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,7 @@ OW_MODEL=sonnet
 OW_MAX_AGENTS=5
 OW_AGENT_TIMEOUT_MS=600000
 OW_POLL_INTERVAL_MS=2000
+OW_IDLE_REAP_GRACE_HOURS=168
 OW_LOG_LEVEL=info
 
 # Optional — per-daemon budget cap in USD (0 = unlimited)
